--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
 				</a>
 					<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>Harry &amp; David</h3>
 						<p>E-Commerce | Responsive Web</p>
 					</div>
 
@@ -186,7 +186,7 @@
 					<img src="imgs/d_shard.png" alt="Shard">
 				</a>
 					<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>Shard</h3>
 						<p>Collaboration Tool | Web App</p>
 					</div>
 
@@ -201,7 +201,7 @@
 						<img src="imgs/d_juvo.png" alt="AthleteJuvo">
 					</a>
 					<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>AthleteJuvo</h3>
 						<p>Gamification | App</p>
 					</div>
 					<div class="project_detail">
@@ -230,7 +230,7 @@
 					<img src="imgs/r_yahoo.png" alt="yahoo">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>Yahoo</h3>
 						<p>Eye-tracking | Mobile Devices</p>
 				</div>
 				<div class="project_detail">
@@ -244,11 +244,11 @@
 					<img src="imgs/d_arvr.png" alt="ARVR">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>AR VR</h3>
 						<p>A VR Design Inspiration Guide & <br>Amazon AR View Redesign</p>
 				</div>
 				<div class="project_detail">
-					<h3>AR/VR Mini Projects</h3>
+					<h3>AR VR Mini Projects</h3>
 				</div>
 			</div>
 
@@ -258,7 +258,7 @@
 					<img src="imgs/d_ui.png" alt="UI">
 				</a>
 				<div class="mix-details fadeIn-top">
-						<h3>Read Case Study</h3>
+						<h3>UI Design</h3>
 						<p>Graphic &amp; UI playground</p>
 				</div>
 				<div class="project_detail">
