--- a/graphic.html
+++ b/graphic.html
@@ -69,7 +69,23 @@
         </a>
       </div>
 
-      
+      <div class="item">
+        <a href="./imgs/UI_plantsapp.gif" data-lightbox="gallery" data-title="Plant care app" aria-label="Plant care app">
+          <img src="imgs/UI_plantsapp.gif" alt="Plant care app">
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="./imgs/UI_MeeMu.png" data-lightbox="gallery" data-title="Group communication tool in outdoor concerts" aria-label="Group communication tool in outdoor concerts">
+          <img src="imgs/UI_MeeMu_thumb.png" alt="Group communication tool in outdoor concerts">
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="./imgs/UI_Out.png" data-lightbox="gallery" data-title="Outdoor activity coach/partners matching app" aria-label="Outdoor activity coach/partners matching app">
+          <img src="imgs/UI_Out_thumb.png" alt="Outdoor activity coach/partners matching app">
+        </a>
+      </div>
 
       <div class="item">
         <a href="./imgs/UI_MixMatch.gif" data-lightbox="gallery" data-title="Mix and Match Web UI" aria-label="Mix and Match Web UI">
@@ -94,24 +110,12 @@
 			  <img src="imgs/UI_13_thumb.png" alt="Poster - infographics">
 			</a>
 		  </div>
-
-        <div class="item">
-          <a href="./imgs/UI_MeeMu.png" data-lightbox="gallery" data-title="Group communication tool in outdoor concerts" aria-label="Group communication tool in outdoor concerts">
-            <img src="imgs/UI_MeeMu_thumb.png" alt="Group communication tool in outdoor concerts">
-          </a>
-		</div>
 		
 		<div class="item">
 			<a href="./imgs/UI_1.gif" data-lightbox="gallery" data-title="Music app interaction" aria-label="Music app interaction">
 			  <img src="imgs/UI_1.gif" alt="Music app interaction">
 			</a>
 		  </div>
-
-        <div class="item">
-          <a href="./imgs/UI_Out.png" data-lightbox="gallery" data-title="Outdoor activity coach/partners matching app" aria-label="Outdoor activity coach/partners matching app">
-            <img src="imgs/UI_Out_thumb.png" alt="Outdoor activity coach/partners matching app">
-          </a>
-		</div>
 
         <div class="item">
           <a href="./imgs/UI_Workout.png" data-lightbox="gallery" data-title="Red Effect Workout Summary Redesign" aria-label="Red Effect Workout Summary Redesign">
