--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<main>
 
 			<h1 class="typer">{
-					<span class="txt-type" data-wait="1000" data-words='["Think Big","Start Small","Move Fast","Make an Impact","I design therefore I am"]'></span> }
+					<span class="txt-type" data-wait="1000" data-words='["I Make User-Empowering Designs"]'></span> }
 			</h1> 
 
 			<div class="svg_wrapper">
