--- a/shard.html
+++ b/shard.html
@@ -386,6 +386,8 @@
 							<li>A timeline for the design iterations so that designers, stakeholders, and future teammates can stay informed of design changes and progression.</li>
 						</ol>
 						<div><a href="imgs/shard_mvp.jpg" data-lightbox="gallery" data-title="MVP" aria-label="MVP"><img src="./imgs/shard_mvp.jpg" alt="MVP"></a></div>
+						<h3>Finalized MVP Features</h3>
+						<img src="imgs/shard_MVPFeatures.png" alt="competitors">
 					</div>
 				</section>
 
@@ -397,24 +399,29 @@
 					<h2>Lo-fi Prototype</h2>
 					<div class="step-block section-break">
 						<h3>Update information and design from other tools to the standalone platform – Shard, and collect feedback from it.</h3>
-						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (Sketch and Slack as examples) with our standalone platform – Shard to support information integration, design presentation, and design documentation by providing features such as Note, Comment, Flow, and Demo.</p>
+						<p>Keeping the above decisions in mind, we started doing wireframes and prototypes to demonstrate how we could integrate design tools and communication tools (Sketch and Slack as examples) with our standalone platform – Shard to support information integration, design presentation, and design documentation by providing features such as <mark>Notes</mark>, <mark>Comments</mark>, <mark>Flow</mark>, and <mark>Journal</mark>.</p>
 						<div><a href="imgs/shard_lofi@2x.png" data-lightbox="gallery" data-title="Low-fi prototype" aria-label="Low-fi prototype"><img src="./imgs/shard_lofi.png" alt="Low-fi prototype"></a></div>
-						
-						
-						<!--<h4>Experiment 1:
-							Do our customers react better to a touch-friendly, button UI or a traditional dropdown?
-						</h4>
-						<p>I wanted to update the design to something that felt more clean and modern while also being more mobile-friendly. It looked nice but it was a less familiar UI and I had to be sure it would work for my users. Thankfully, the initial tests showed that users appreciated the interaction.</p>
-						<img src="imgs/fomc_experiment-1.png" alt="Circles vs Dropdown Comparison">
-						<h4>Experiment 2:
-							Would reflecting the selected length/date on the photo thumbnail be helpful?
-						</h4>
-						<p>To reduce scrolling for detailed information, some data was tucked away behind a click. The question for me was whether users would notice and feel comfortable with a small piece of key information regarding the length of the club purchase rather than a general information button.</p>
-						<div class="project_photowrap">
-							<div><a href="imgs/fomc_experiment-2@2x.png" data-lightbox="gallery" data-title="Image snipe feedback" aria-label="Image snipe feedback"><img src="./imgs/fomc_experiment-2.png" alt="Image snipe feedback"></a></div>
-						</div>
 					</div>
-					<div class="step-block">
+
+					<h2>Iteration</h2>
+					<div class="step-block section-break">
+						<h3>We used our low-fi prototoype on guerrilla testing, and modified features such as Journal, Comments, and Notes.</h3>
+						<img src="imgs/shard_iteration1.png" alt="shard_iteration1">
+						<img src="imgs/shard_iteration2.png" alt="shard_iteration2">
+					</div>
+
+					<h2>Style Guide</h2>
+					<div class="step-block section-break">
+						<h3>Before moving on to the high-hi prototype, we held a brainstorming discussion about branding and the image we hope to convey in our visual style.</h3>
+						<img src="imgs/shard_style1.png" alt="shard_style1">
+						<img src="imgs/shard_style2.png" alt="shard_style2">
+						<img src="imgs/shard_style3.png" alt="shard_style3">
+						<img src="imgs/shard_style4.png" alt="shard_style4">
+					</div>
+
+
+
+					<!--<div class="step-block">
 						<h3 data-aos="text-underline">
 							What brings the most business value?
 						</h3>
