--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 		<div class="bg_ivory">
 			<div class = "greeting">
 				<h2>It's All About Sharing and Caring!</h2>
-				<p>I think the best part about the UX community is that everyone cares about everyone. Throughout my career transition, I got help from friends, teachers, and even strangers! I want to share my passion and what I learned throughout the journey. Recently I started my big plan of starting a YouTube channel for interaction design tutorials. Stay tuned!</p>
+				<p>I think the best part about the UX community is that everyone cares about everyone.<br>Throughout my career transition, I got help from friends, teachers, and even strangers!<br>I want to share my passion and what I learned throughout the journey.<br>Recently I also started my big plan of starting a YouTube channel for interaction design tutorials. Stay tuned!</p>
 					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
 					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
 			</div>
