--- a/index.html
+++ b/index.html
@@ -166,21 +166,6 @@
 		</div>
 		<div class = "mix_container"> 
 			<div class="mix design">
-				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
-					<div class="mix-overlay"></div>
-					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
-				</a>
-					<div class="mix-details fadeIn-top">
-						<h3>Harry &amp; David</h3>
-						<p>E-Commerce | Responsive Web</p>
-					</div>
-
-					<div class="project_detail">
-						<h3>Harry &amp; David</h3>
-					</div>
-			</div>
-
-			<div class="mix design">
 				<a href="shard.html" data-title="Shard" aria-label="Shard">
 					<div class="mix-overlay"></div>
 					<img src="imgs/d_shard.png" alt="Shard">
@@ -207,6 +192,21 @@
 					<div class="project_detail">
 						<h3>AthleteJuvo</h3>
 						<!--<p>Smart Rehab Assistant| App</p>-->
+					</div>
+			</div>
+
+			<div class="mix design">
+				<a href="fomc.html" data-title="Fruit of the Month Club" aria-label="Fruit of the Month Club">
+					<div class="mix-overlay"></div>
+					<img src="imgs/d_fomc.png" alt="Fruit of the Month Club">
+				</a>
+					<div class="mix-details fadeIn-top">
+						<h3>Harry &amp; David</h3>
+						<p>E-Commerce | Responsive Web</p>
+					</div>
+
+					<div class="project_detail">
+						<h3>Harry &amp; David</h3>
 					</div>
 			</div>
 
@@ -332,7 +332,10 @@
 		<div class="bg_ivory">
 			<div class = "greeting">
 				<h2>It's All About Sharing and Caring!</h2>
-				<p>I think the best part about the UX community is that everyone cares about everyone.<br>Throughout my career transition, I got help from friends, teachers, and even strangers!<br>I want to share my passion and what I learned throughout the journey.<br>Recently I also started my big plan of starting a YouTube channel for interaction design tutorials. Stay tuned!</p>
+				<p>I think the best part about the UX community is that everyone cares about everyone.<br>
+					Throughout my career transition, I got help from friends, teachers, and even strangers!<br>
+					I want to share my passion and what I learned throughout the journey.<br>
+					Recently I also started my big plan of starting a YouTube channel for interaction design tutorials. Stay tuned!</p>
 					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
 					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
 			</div>
