--- a/shard.html
+++ b/shard.html
@@ -410,7 +410,7 @@
 						<img src="imgs/shard_iteration2.png" alt="shard_iteration2">
 					</div>
 
-					<h2>Style Guide</h2>
+					<h2>Design Language</h2>
 					<div class="step-block section-break">
 						<h3>Before moving on to the high-hi prototype, we held a brainstorming discussion about branding and the image we hope to convey in our visual style.</h3>
 						<img src="imgs/shard_style1.png" alt="shard_style1">
