--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 		</div>
 		<div class="bg_ivory">
 			<div class = "greeting">
-				<h2>It's All About Sharing and Caring!</h2>
+				<h2>It's all about sharing and caring!</h2>
 				<p>I think the best part about the UX community is that everyone cares about everyone.<br>
 					Throughout my career transition, I got help from friends, teachers, and even strangers!<br>
 					I want to share my passion and what I learned throughout the journey.<br>
