--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<main>
 
 			<h1 class="typer">{
-					<span class="txt-type" data-wait="1000" data-words='["Hey I'm Blair","A Psychophysiologist turned designer",]'></span> }
+					<span class="txt-type" data-wait="1000" data-words='["Design is empowering your user","Move fast","Make an impact"]'></span> }
 			</h1> 
 
 			<div class="svg_wrapper">
