--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hello! Welcome to Blair Shen's portfolio. I'm a UX designer with a Master's degree in HCI from the University of Michigan.">
-    <meta name="keywords" content="Blair, Shen, Yu-Yin, Barnett, Portfolio, UX Reseacher, Senior, UX Designer, Design, Product, UI">
+    <meta name="keywords" content="Blair, Shen, Yu-Yin, Portfolio, UX Reseacher, Senior, UX Designer, Design, Product, UI">
     <meta name="author" content="Blair Shen">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -59,7 +59,7 @@
 		<main>
 
 			<h1 class="typer">{
-					<span class="txt-type" data-wait="1000" data-words='["Hey this is Blair","A Psychophysiologist turned designer","I use UX to close the digital divide"]'></span> }
+					<span class="txt-type" data-wait="1000" data-words='["Hey this is Blair","I'm a UX designer"]'></span> }
 			</h1> 
 
 			<div class="svg_wrapper">
