--- a/graphic.html
+++ b/graphic.html
@@ -87,17 +87,17 @@
         </a>
       </div>
 
-      <div class="item">
+      <!--<div class="item">
         <a href="./imgs/UI_MixMatch.gif" data-lightbox="gallery" data-title="Mix and Match Web UI" aria-label="Mix and Match Web UI">
           <img src="imgs/UI_MixMatch.gif" alt="Mix and Match Web UI">
         </a>
-    </div>
+    </div>-->
 
-    <div class="item">
+    <!--<div class="item">
       <a href="./imgs/UI_Store.gif" data-lightbox="gallery" data-title="Store Locator" aria-label="Store Locator">
         <img src="imgs/UI_Store.gif" alt="Store Locator">
       </a>
-  </div>
+  </div>-->
 
   <div class="item">
     <a href="./imgs/UI_IRIS.gif" data-lightbox="gallery" data-title="IRIS Data Dashboard" aria-label="IRIS Data Dashboard">
@@ -111,11 +111,11 @@
 			</a>
 		  </div>
 		
-		<div class="item">
+		<!--<div class="item">
 			<a href="./imgs/UI_1.gif" data-lightbox="gallery" data-title="Music app interaction" aria-label="Music app interaction">
 			  <img src="imgs/UI_1.gif" alt="Music app interaction">
 			</a>
-		  </div>
+		  </div>-->
 
         <div class="item">
           <a href="./imgs/UI_Workout.png" data-lightbox="gallery" data-title="Red Effect Workout Summary Redesign" aria-label="Red Effect Workout Summary Redesign">
