--- a/fomc.html
+++ b/fomc.html
@@ -294,7 +294,7 @@
 
 			<section class="solution banner">
 				<div class="solution-content">
-					<h2>Live Design</h2>
+					<h2>In Production</h2>
 					<video src="imgs/fomc_live.mp4" controls autoplay muted></video>
 				</div>
 			</section>
