--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 <main>
         <div class = "about_content">
         <img src="imgs/Home_1.png" class = "about" alt = "profile picture"/>
-        <h1>Blair… who?</h1>   
+        <h1>Blair Shen - It's NOT just BS...</h1>   
         <p>I came to the states to pursue Human-Computer Interaction (UX Design & Research) after completing my M.A. in Communication & Technology Studies in Taiwan. My background in literature, humanities, and social science allows me to solve problems through <b>translating research data into empathetic and logical design solutions</b>. My lifetime goal is to narrow the gap among genders, classes, and ethnicities via design.<br><br>During my free time you can find me dancing, consuming some nerdy content online, and training my cat to do dog tricks.</p>
         <div class="project_photowrap">
             <div><img src="./imgs/about1.png" alt="About1"></div>
