--- a/fomc.html
+++ b/fomc.html
@@ -165,7 +165,6 @@
 			<section class="breakdown text-block">
 				<section class="research">
 					<span data-aos="hide-fade" data-aos-anchor=".ideation" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade-right" data-aos-anchor=".process" data-aos-anchor-placement="center-top"></div>
 					</span>
 					<h2 >Research</h2>
 					<div class="step-block section-break">
@@ -175,8 +174,13 @@
 						<p>
 							As the solo designer and researcher with the limited resources the company could provide, I conducted competitor analysis, secondary research, and remote usability testing to understand the market, customers, and usability opportunities.
 						</p>
+						<p>After presenting the competitor analysis to the team, we noticed the interfaces from our partial and analogous competitors are more intuitive than the ones from our direct competitors. Then we decided to borrow wisdoms from partial and analogous competitors</p>
+						<div class="project_photowrap">
+							<div><a href="imgs/FOMC_CA_large.jpg" data-lightbox="gallery" data-title="Competitor analysis table" aria-label="Competitor analysis table"><img src="./imgs/FOMC_CA1.jpg" alt="competitor analysis table"></a></div>
+						</div>
+						<h3>Club customer profile</h3>
+						<p>Data provided and retrieved from Epsilon Data Management, LLC.</p>
 						<img src="imgs/FOMC_karen.png" alt="persona">
-						<img src="imgs/FOMC_stats.png" alt="stats">
 					</div>
 				</section>
 
@@ -208,8 +212,15 @@
 					<h2 >Rapid prototyping</h2>
 					<div class="step-block section-break">
 						<h3>From low-fi to hi-fi, every interaction is supported by research based rationales</h3>
+						<h4>Paper and pen for quick ideatation</h4>
+						<div class="project_photowrap">
+							<p>After discussing with other senior team members with my sketches, I learned more about which designs worked or didn't work well in the past.</p>
+							<div><a href="imgs/FOMC_sketch@2x.png" data-lightbox="gallery" data-title="Quick sketch to ideate" aria-label="Quick sketch to ideate"><img src="./imgs/FOMC_sketch@1x.png" alt="Quick sketch to ideate"></a></div>
+						</div>
+						
 						<h4>Product Page Wireframe</h4>
 						<div class="project_photowrap">
+							<p>Moveing forward based on my sketches, I made low-fi wireframes and discussed with stakeholders to make sure the design suits business requirements.</p>
 							<div><a href="imgs/fomc_ideation-product-page@2x.png" data-lightbox="gallery" data-title="Wireframe - Product page" aria-label="Product page"><img src="./imgs/fomc_ideation-product-page.png" alt="Product page"></a></div>
 						</div>
 						<h4>Product Alt Images Wireframe</h4>
@@ -224,18 +235,39 @@
 
 				<section class="prototype">
 					<span data-aos="hide-fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".prototype" data-aos-anchor-placement="top-center"></div>
 					</span>
 					<h2 >Prototype</h2>
 					<div class="step-block section-break">
-						<p>Using the wireframes as a starting point, I created a high-fidelity, interactive prototype for user testing.</p>
+						<p>Using the wireframes as a starting point, I created a high-fidelity, interactive prototype for remote user testing on UserTesting.com.</p>
 						<video width="1152" src="imgs/fomc_hifi.mp4" controls autoplay muted></video>
+
+						<div class="step-block">
+							<h2>Mobile Devices - the Opportunities</h2>
+							<h3>
+								Prioritize the User's Task and Touch Targets
+							</h3>
+							<p>Since the company just finished replaformed their mobile site at the time I joined the team, the design on mobile was updated fairly recently. Yet there are some missed opportunities such as touch targets violated WCAG 2.1 guidelines and the placement of club length and month should be higher up to provide the information upfront for customers.</p>
+							<h4>Current pages on mobiles and tablets</h4>
+							<div class="project_photowrap">
+								<div><a href="imgs/FOMC_m@2x.png" data-lightbox="gallery" data-title="Current club page on mobiles" aria-label="Current club page on mobiles"><img src="./imgs/FOMC_m@1x.png" alt="Current club page on mobiles"></a></div>
+								<div><a href="imgs/FOMC_tablet@2x.png" data-lightbox="gallery" data-title="Current club page on tablets" aria-label="Current club page on tablets"><img src="./imgs/FOMC_tablet@1x.png" alt="Current club page on tablets"></a></div>
+							</div>
+							<h4>Iterations of the mobile page</h4>
+							<div class="project_photowrap">
+								<div><a href="imgs/FOMC_mobile proto@2x.png" data-lightbox="gallery" data-title="Iterations on mobiles" aria-label="Iterations on mobiles"><img src="./imgs/FOMC_mobile proto@1x.png" alt="Iterations on mobiles"></a></div>
+							</div>
+							<h4>Iterations of the tablet page</h4>
+							<div class="project_photowrap">
+								<div><a href="imgs/FOMC_tablet proto@2x.png" data-lightbox="gallery" data-title="Iterations on tablets" aria-label="Iterations on tablets"><img src="./imgs/FOMC_tablet proto@1x.png" alt="Iterations on tablets"></a></div>
+							</div>
+						</div>
 					</div>
+
+					
 				</section>
 
 				<section class="test">
 					<span data-aos="hide-fade" data-aos-anchor=".solution" data-aos-anchor-placement="top-center">
-						<div class="breakdown-floater" data-aos="fade" data-aos-anchor=".test" data-aos-anchor-placement="top-center"></div>
 					</span>
 					<h2 >Design iteration 1</h2>
 					<div class="step-block section-break">
@@ -289,6 +321,7 @@
 						<p>The treatment significantly boosted the order value and the sales.</p>
 					<img src="imgs/fomc_best-value-3.png" alt="Final Iteration of Club Length">
 					</div>
+
 				</section>
 			</section>
 
@@ -296,13 +329,14 @@
 				<div class="solution-content">
 					<h2>In Production</h2>
 					<video src="imgs/fomc_live.mp4" controls autoplay muted></video>
+					<video src="imgs/FOMC_mobile.mp4" controls autoplay muted></video>
 				</div>
 			</section>
 
 			<section class="conclusion text-block">
 				<h2 >Result</h2>
 				<h3 style="font-style: italic;">"The experience was flawless.
-					It was really straightforward and to the point."</h3>
+					It was really straightforward and to the point." - Club research participant</h3>
 					<p>The new design increased upsell purchase by 17.09% and revenue by 14.11% (about $ 1 million more than the old experience over a 4 month test.) Besides quantitative uplift, customers have been given positive feedback, which also reflects on their purchase behaviors.</p>
 				<div class="stat-bar">
 					<div class="stat-result">
