--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			</div>
 		
 
-		<h1 id="home_h1">Selected projects</h1>
+		<h1 id="home_h1">Selected Projects</h1>
 
 		<div class="buttons">
 				<button type="button" class="button" data-filter="all">All</button>
@@ -330,24 +330,65 @@
 			</div>-->
 		</div>
 		<div class="bg_ivory">
-			<div class = "greeting">
-				<h2>An active UX community contributor</h2>
-				<p>I think the best part about the UX community is that everyone cares about everyone.<br>
-					Throughout my career transition, I got help from friends, teachers, and even strangers!<br>
-					I want to share my passion and what I learned throughout the journey.<br>
-					Recently I also started my YouTube channel, sharing my knowledge in UX with people of Taiwan.</p>
+			<div class = "card_title">
+				<h2>Talks</h2>
+				<p>I think the best part about the UX community is that everyone cares about everyone.
+					Throughout my career transition, I got help from friends, teachers, and even strangers!
+					I want to share my passion and what I learned throughout the journey.</p>
+				<div class="talks">
 					<video width="1152" src="imgs/Ignite UX.mp4" controls autoplay muted></video>
 					<video width="1152" src="imgs/Passion Pitch.mp4" controls autoplay muted></video>
+				</div>
 			</div>
 		</div>
 
 		<div class = "contact_flex">
 			<div class = "card_title">
-				<h2>I earn my bread and butter by…</h2>
+				<h2>YouTube Tutorials</h2>
+				<p>As a UX practitioner in the U.S., I started my YouTube channel to share UX related knowledge with Taiwanese designers. Unlike in the U.S., UX resources in English aren't always digestable for ESL speakers in Taiwan. I always try my best to democratize knowledge for those who don't have the access or equal opportunities.</p>
+				<div class="buttons">
+					<a href="https://www.youtube.com/channel/UCBzxKMkzhkqK7rUM35Qp2hg/videos"data-title="Youtube channel" aria-label="Youtube channel" target="_blank"><button type="button" class="button" data-filter="all">Check Out My Channel - It's Just BS</button></a>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="card_wrap YT">
+			<a href="https://youtu.be/rkMEZeo8sVY" target="_blank">
+			<div class="card">
+				<img src="imgs/YT1.png" alt="card1">
+				<div class="card_container">
+					<h4><b>How to Choose a Site Builder?</b></h4></a>
+					<p>I shared my experiences of using different site builders to make my portfolio.</p> 
+				</div>
+			</div>
+			
+			<a href="https://youtu.be/AcqRDnEjh7g" target="_blank">
+				<div class="card">
+					<img src="imgs/YT2.png" alt="card2">
+					<div class="card_container">
+						<h4><b>7 Common Design Portfolio Mistakes to Avoid</b></h4></a>
+						<p>Based on the suggestions I got from mentors at adplist.org, I shared tips and offered pro bono portfolio reviews for designers in Taiwan.</p> 
+					</div>
+			</div>
+
+			<a href="https://youtu.be/GINQXIUsN14" target="_blank">
+				<div class="card">
+					<img src="imgs/YT3.jpg" alt="card3">
+						<div class="card_container">
+							<h4><b>Book Review - Design with Data</b></h4></a>
+							<p>In this video, I shared my quick summary of the book “Designing with Data" with my viewers.</p> 
+						</div>
+				</div>
+		</div>
+		
+		<div class = "contact_flex">
+			<div class = "card_title">
+				<h2>Skillsets</h2>
 			</div>
 
 		<div class="card_wrap">
-			<div class="card card1">
+			<div class="card">
 			<img src="imgs/card1.png" alt="card1">
 			<div class="card_container">
 				<h4><b>Design</b></h4> 
@@ -355,7 +396,7 @@
 			</div>
 			</div>
 
-			<div class="card card2">
+			<div class="card">
 			<img src="imgs/card2.png" alt="card2">
 			<div class="card_container">
 				<h4><b>Research</b></h4> 
@@ -363,7 +404,7 @@
 			</div>
 			</div>
 
-			<div class="card card3">
+			<div class="card">
 			<img src="imgs/card3.png" alt="card3">
 			<div class="card_container">
 				<h4><b>Business Strategy</b></h4> 
