--- a/fomc.html
+++ b/fomc.html
@@ -328,8 +328,8 @@
 			<section class="solution banner">
 				<div class="solution-content">
 					<h2>In Production</h2>
-					<video src="imgs/fomc_live.mp4" controls autoplay muted></video>
-					<video src="imgs/FOMC_mobile.mp4" controls autoplay muted></video>
+					<video class="production" src="imgs/fomc_live.mp4" controls autoplay muted></video>
+					<video class="production" src="imgs/FOMC_mobile.mp4" controls autoplay muted></video>
 				</div>
 			</section>
 
